name:                oauth2-github
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             PublicDomain
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

executable oauth2-github
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       Spock,
                       aeson,
                       base,
                       hoauth2,
                       http-client-tls,
                       text,
                       uri-bytestring
  -- hs-source-dirs:      
  default-language:    Haskell2010
